--- a/login.html
+++ b/login.html
@@ -22,16 +22,15 @@
     <title>EpicTrip | 에픽트립</title>
 
     <link href="./css/headFoot.css" rel="stylesheet">
-    <link href="./css/headFoot.css" rel="stylesheet">
-    <link href="/" rel="stylesheet">
+    <link href="./css/cSchedule.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <a href="#"><img class="headLogo" src="./source/logo.png"></a>
         <nav>
-            <div class="">
-                <ul class="">
+            <a href="./main.html"><img class="headLogo" src="./source/logo.png"></a>
+            <div class="gnb">
+                <ul class="gnbTab">
                     <li>
                         <a href="#">여행상점</a>
                     </li>
@@ -39,9 +38,9 @@
                         <a href="#">커뮤니티</a>
                     </li>
                 </ul>
-                <div class="">
-                    <img src="./">
-                    <img src="./">
+                <div class="account">
+                    <a href="./login.html">로그인</a>
+                    <a href="./register.html">회원가입</a>
                 </div>
             </div>
         </nav>
@@ -53,11 +52,14 @@
 
     <footer>
         <img src="./source/logo_white.png">
-        <p>© Milrim, Inc. 2023. No more dull moments!</p>
+        <p><a href="mailto:depo89055@gmail.com">프로젝트 문의 dddd@gmail.com</a></p>
+        <p>유선 상담 010-1234-1234</p>
+        <p>Copyright© EpicTrip, Inc. 2023. All Rights Reserved.</p>
     </footer>
 
 
-    <script src="./"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/cSchedule.js"></script>
 </body>
 
 </html>
