--- a/community_schedule.html
+++ b/community_schedule.html
@@ -50,8 +50,14 @@
             </div>
         </nav>
         <div class="gnbBottom">
-            <span class="together">동행</span>
-            <span class="sche">일정</span>
+            <a href="#" class="together">
+                <img src="./source/group.png">
+                <span >동행</span>
+            </a>
+            <a href="#"  class="sche">
+                <img src="./source/date.png">
+                <span>일정</span>
+            </a>
         </div>
     </header>
 
