--- a/login.html
+++ b/login.html
@@ -52,14 +52,13 @@
 
     <footer>
         <img src="./source/logo_white.png">
-        <p><a href="mailto:depo89055@gmail.com">프로젝트 문의 dddd@gmail.com</a></p>
+        <a href="mailto:depo89055@gmail.com">프로젝트 문의 dddd@gmail.com</a>
         <p>유선 상담 010-1234-1234</p>
         <p>Copyright© EpicTrip, Inc. 2023. All Rights Reserved.</p>
     </footer>
 
 
     <script src="./js/header.js"></script>
-    <script src="./js/cSchedule.js"></script>
 </body>
 
 </html>
