--- a/community_schedule.html
+++ b/community_schedule.html
@@ -39,8 +39,8 @@
                     </li>
                 </ul>
                 <div class="userHead">
-                    <a href="#"><img src="./source/msg.png"></a>
-                    <a href="#" class="userImg"><img src="./source/user.png"></a>
+                    <a href="#"><img class="msgImg" src="./source/msg.png"></a>
+                    <a href="#" ><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
                         <li>마이페이지</li>
