--- a/community_schedule.html
+++ b/community_schedule.html
@@ -61,8 +61,16 @@
         </div>
     </header>
 
-    <section>
-
+    <section class="cSchSection">
+        <form class="schFrm">
+            <input type="text" name="schBox" placeholder="여행지를 검색해보세요">
+        </form>
+        <a href="./Community_Posting.html">작성하기</a>
+        <div class="schAll">
+            <div>
+                <div class="schMap"></div>
+            </div>
+        </div>
     </section>
 
     <footer>
@@ -74,6 +82,7 @@
 
 
     <script src="./js/header.js"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUGU4a6_du1rtCwNDAGCRROJteWTuVS2E&callback=initMap"></script>
     <script src="./js/cSchedule.js"></script>
 </body>
 
