--- a/community_schedule.html
+++ b/community_schedule.html
@@ -69,6 +69,9 @@
         <div class="schAll">
             <div>
                 <div class="schMap"></div>
+                <div>
+                    
+                </div>
             </div>
         </div>
     </section>
