--- a/community_schedule.html
+++ b/community_schedule.html
@@ -65,13 +65,28 @@
         <form class="schFrm">
             <input type="text" name="schBox" placeholder="여행지를 검색해보세요">
         </form>
-        <a href="./Community_Posting.html">작성하기</a>
+        <a href="./Community_Posting.html" class="postBtn">작성하기</a>
         <div class="schAll">
-            <div>
-                <div class="schMap"></div>
-                <div>
-                    
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p>nickname</p>
+                            <p>30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간 <span class="days">5일</span></p>
+                        <p>
+                            <span>2023-08-01</span>
+                            <span>2023-08-23</span>
+                        </p>
+                    </div>
                 </div>
+
+
+                <div class="schMap"></div>
             </div>
         </div>
     </section>
