--- a/community_schedule.html
+++ b/community_schedule.html
@@ -62,33 +62,227 @@
     </header>
 
     <section class="cSchSection">
-        <form class="schFrm">
-            <input type="text" name="schBox" placeholder="여행지를 검색해보세요">
-        </form>
-        <a href="./Community_Posting.html" class="postBtn">작성하기</a>
+        <div class="frmLine">
+            <div>
+                <form class="schFrm">
+                    <input type="text" name="schBox" placeholder="여행지를 검색해보세요">
+                    <button type="button"></button>
+                </form>
+                <button type="button" class="sortBtn">조회순</button>
+            </div>
+            <a href="./Community_Posting.html" class="postBtn">작성하기</a>
+        </div>
+
         <div class="schAll">
+
             <div class="schOne">
                 <div class="schTopInfo">
                     <div class="schUser">
                         <img src="./source/profImg1.jpg">
                         <div>
-                            <p>nickname</p>
-                            <p>30대 • 여성</p>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
                         </div>
                     </div>
                     <div class="schDays">
-                        <p>여행기간 <span class="days">5일</span></p>
-                        <p>
-                            <span>2023-08-01</span>
-                            <span>2023-08-23</span>
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
                         </p>
                     </div>
                 </div>
-
-
-                <div class="schMap"></div>
+                <div class="schMap schMap01"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
+            </div>
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
+                        </p>
+                    </div>
+                </div>
+                <div class="schMap schMap02"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
+            </div>
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
+                        </p>
+                    </div>
+                </div>
+                <div class="schMap schMap03"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
+            </div>
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
+                        </p>
+                    </div>
+                </div>
+                <div class="schMap schMap03"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
+            </div>
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
+                        </p>
+                    </div>
+                </div>
+                <div class="schMap schMap03"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
+            </div>
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
+                        </p>
+                    </div>
+                </div>
+                <div class="schMap schMap03"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
+            </div>
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
+                        </p>
+                    </div>
+                </div>
+                <div class="schMap schMap03"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
+            </div>
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
+                        </p>
+                    </div>
+                </div>
+                <div class="schMap schMap04"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
+            </div>
+            <div class="schOne">
+                <div class="schTopInfo">
+                    <div class="schUser">
+                        <img src="./source/profImg1.jpg">
+                        <div>
+                            <p class="schNicK">닉네임</p>
+                            <p class="subTxt">30대 • 여성</p>
+                        </div>
+                    </div>
+                    <div class="schDays">
+                        <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                        <p  class="subTxt">
+                            23-08-01 ~ 23-08-06
+                        </p>
+                    </div>
+                </div>
+                <div class="schMap schMap05"></div>
+                <div class="schBottom">
+                    <span class="schLoc">홍콩</span>
+                    <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                </div>
             </div>
         </div>
+
+
+        <!--
+            <div class="pagination">
+                <span>1</span>
+                <span>2</span>
+                <span>3</span>
+            </div>
+        -->
     </section>
 
     <footer>
