--- a/community_schedule.html
+++ b/community_schedule.html
@@ -70,7 +70,7 @@
                 </form>
                 <button type="button" class="sortBtn">조회순</button>
             </div>
-            <a href="./Community_Posting.html" class="postBtn">작성하기</a>
+            <a href="./Community_WriteSch.html" class="postBtn">작성하기</a>
         </div>
 
         <div class="schAll">
