--- a/Community_SchDetail.html
+++ b/Community_SchDetail.html
@@ -54,7 +54,7 @@
                 <img src="./source/group.png">
                 <span >동행</span>
             </a>
-            <a href="#"  class="sche">
+            <a href="./community_schedule.html"  class="sche">
                 <img src="./source/date.png">
                 <span>일정</span>
             </a>
