--- a/Community_WriteSch.html
+++ b/Community_WriteSch.html
@@ -252,6 +252,7 @@
 
 
     <script src="./js/header.js"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUGU4a6_du1rtCwNDAGCRROJteWTuVS2E&callback=initMap"></script>
     <script src="./js/cWriteSch.js"></script>
 </body>
 
