--- a/Community_WriteSch.html
+++ b/Community_WriteSch.html
@@ -211,14 +211,8 @@
                                     <span class="memoCnt">1</span>
                                     <input type="text" class="memoTxt">
                                 </div>
-                                <div class="schMemo">
-                                    <span class="memoCnt">2</span>
-                                    <input type="text" class="memoTxt">
-                                </div>
-                                <div class="schMemo">
-                                    <span class="memoCnt">2</span>
-                                    <input type="text" class="memoTxt">
-                                </div>
+
+                                <button type="button" class="locAdd">장소 추가하기</button>
                             </div>
                             <div class="dayOne">
                                 <div class="dayTxt">
@@ -230,8 +224,8 @@
                                     <span class="memoCnt">1</span>
                                     <input type="text" class="memoTxt">
                                     
-                                    <button type="button">장소 추가하기</button>
                                 </div>
+                                <button type="button" class="locAdd">장소 추가하기</button>
                             </div>
                         </div>
 
