--- a/Community_WriteSch.html
+++ b/Community_WriteSch.html
@@ -123,7 +123,6 @@
                         <label for="loc20">홍콩</label>
                     </div>
                 </div>
-
                 <div class="opLine">
                     <span>마카오</span>
                     <div class="options">
@@ -186,7 +185,7 @@
                 </div>
             </div>
 
-            <div class="detailWrtie">
+            <div class="detailWrite">
                 <div class="mapInfoAll">
                     <div class="schMap"></div>
                     
@@ -234,6 +233,16 @@
                 </div>
             </div>
         </form>
+
+        <div class="locModal">
+            <h4>장소 추가하기</h4>
+            <input type="text" placeholder="장소를 입력해주세요">
+            <form class="schLocBox">
+                <ul>
+                    <li></li>
+                </ul>
+            </form>
+        </div>
     </section>
 
 
