--- a/Community_WriteSch.html
+++ b/Community_WriteSch.html
@@ -236,11 +236,13 @@
 
         <div class="locModal">
             <h4>장소 추가하기</h4>
-            <input type="text" placeholder="장소를 입력해주세요">
+            <input type="text" placeholder="장소를 입력해주세요" class="addLocTxt">
             <form class="schLocBox">
-                <ul>
-                    <li></li>
-                </ul>
+                <input type="radio" id="ds01" name="ds" value="">
+                <label for="ds01">
+                    <span>후쿠오카 타워</span>
+                    <div class="check"></div>
+                </label>
             </form>
         </div>
     </section>
