--- a/Community_Group.html
+++ b/Community_Group.html
@@ -50,11 +50,11 @@
             </div>
         </nav>
         <div class="gnbBottom">
-            <a href="#" class="together">
-                <img src="./source/group.png">
+            <a href="./Community_Group.html" class="together">
+                <img src="./source/Group.png">
                 <span>동행</span>
             </a>
-            <a href="#" class="sche">
+            <a href="./community_schedule.html" class="sche">
                 <img src="./source/date.png">
                 <span>일정</span>
             </a>
@@ -70,12 +70,12 @@
                 </form>
                 <button type="button" class="sortBtn">조회순</button>
             </div>
-            <a href="./Community_Posting.html" class="postBtn">작성하기</a>
+            <a href="./Community_WriteGrp.html" class="postBtn">작성하기</a>
         </div>
 
         <div class="schAll">
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -121,7 +121,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -167,7 +167,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -213,7 +213,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -259,7 +259,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -305,7 +305,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -351,7 +351,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -397,7 +397,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -443,7 +443,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -489,7 +489,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -535,7 +535,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -581,7 +581,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -627,7 +627,7 @@
                 </div>
             </a>
 
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="Community_GrpDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
