--- a/community_schedule.html
+++ b/community_schedule.html
@@ -50,11 +50,11 @@
             </div>
         </nav>
         <div class="gnbBottom">
-            <a href="#" class="together">
+            <a href="./Community_Group.html" class="together">
                 <img src="./source/group.png">
                 <span >동행</span>
             </a>
-            <a href="#"  class="sche">
+            <a href="./community_schedule.html"  class="sche">
                 <img src="./source/date.png">
                 <span>일정</span>
             </a>
