--- a/Community_WriteSch.html
+++ b/Community_WriteSch.html
@@ -230,9 +230,11 @@
                                 <button type="button" class="locAdd">장소 추가하기</button>
                             </div>
                         </div>
-
                     </div>
+
                 </div>
+
+                <button type="button" class="submitBtn">작성완료</button>
             </div>
         </form>
 
