--- a/Community_WriteGrp.html
+++ b/Community_WriteGrp.html
@@ -184,10 +184,10 @@
                     <span>날짜 선택</span>
                     <div class="dateInput">
                         <div class="dpDiv">
-                            <input type="text" class="datePick startDay" placeholder="첫째날 선택">
+                            <input type="text" name="startDay" class="datePick" placeholder="첫째날 선택">
                         </div>
                         <div class="dpDiv">
-                            <input type="text" class="datePick endDay" placeholder="마지막날 선택">
+                            <input type="text" name="endDay" class="datePick" placeholder="마지막날 선택">
                         </div>
                     </div>
                 </div>
@@ -197,15 +197,22 @@
 
                 <div class="imgUpAll">
                     <span>배경 이미지를 선택해주세요</span>
+                    <input type="file" name="imgFile" id="fileInput">
+                    <label for="fileInput" class="uploadedBtn">재업로드</label> 
                     <div class="imgArea">
-                        <input type="file" id="fileInput">
                         <label for="fileInput" class="fileLabel">업로드</label> 
                     </div>
                 </div>
 
+                <div class="titleBox">
+                    <input type="text" name="title" placeholder="제목을 입력해주세요">
+                </div>
 
-                <button type="button" class="submitBtn">작성완료</button>
+                <div class="contextBox">
+                    <textarea name="context" placeholder="1. 현재 동행이 있나요?&#13;&#10;ex) 혼자에요 / 동행 1명이 있어요&#13;&#10;&#13;&#10;2.어떤 동행을 찾고 있나요?&#13;&#10;ex) 맛집 탐방을 좋아하는 20대 여성 동행을 찾아요!&#13;&#10;&#13;&#10;3. 원하는 여행 코스가 있다면 알려주세요!&#13;&#10;(1000자 이내) "></textarea>
+                </div>
             </div>
+            <button type="button" class="submitBtn">작성완료</button>
         </form>
     </section>
 
