--- a/store.html
+++ b/store.html
@@ -20,8 +20,11 @@
     <link rel="icon" href="./source/favicon-32x32.png" sizes="32x32">
     <link rel="apple-touch-icon" href="./source/apple-icon-180x180.png" sizes="180x180">
     <title>EpicTrip | 에픽트립</title>
-
+    
     <link href="./css/headFoot.css" rel="stylesheet">
+    <link href="./css/store.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/slick.css" />
+    <link rel="stylesheet" href="./css/slick_theme.css" />
 </head>
 
 <body>
@@ -31,15 +34,15 @@
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
-                        <a href="#" class="store">여행상점</a>
+                        <a href="./store.html" class="store">여행상점</a>
                     </li>
                     <li>
-                        <a href="#" class="community">커뮤니티</a>
+                        <a href="./Community_Group.html" class="community">커뮤니티</a>
                     </li>
                 </ul>
                 <div class="userHead">
-                    <a href="#"><img src="./source/msg.png"></a>
-                    <a href="#" class="userImg"><img src="./source/user.png"></a>
+                    <a href="#"><img class="msgImg" src="./source/msg.png"></a>
+                    <a href="#"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
                         <li>마이페이지</li>
@@ -48,15 +51,44 @@
                 </div>
             </div>
         </nav>
-        <div class="gnbBottom">
-            <span>동행</span>
-            <span>일정</span>
-        </div>
     </header>
 
     <section>
+        <h3>나라별 여행지</h3>
+        <div class="ctryBanner">
 
+        </div>
+
+        
+        <div class="slider">
+            <div class="bn01 bn">
+                <div class="bContent01 bContent ">
+                    <p>애니메이션 홍보 홍보</p>
+                </div>
+            </div>
+            <div class="bn02 bn">
+                <div class="bContent02 bContent ">
+                    <p>머선머선 애니메이션</p>
+                </div>
+            </div>
+            <div class="bn03 bn">
+                <div class="bContent03 bContent ">
+                    <p>애니메이션 홍보 홍보</p>
+                </div>
+            </div>
+            <div class="bn04 bn">
+                <div class="bContent04 bContent ">
+                    <p>애니메이션 홍보 홍보</p>
+                </div>
+            </div>
+            <div class="bn05 bn">
+                <div class="bContent05 bContent ">
+                    <p>애니메이션 홍보 홍보</p>
+                </div>
+            </div>
+        </div>
     </section>
+
 
     <footer>
         <img src="./source/logo_white.png">
@@ -65,8 +97,11 @@
         <p>Copyright© EpicTrip, Inc. 2023. All Rights Reserved.</p>
     </footer>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="./js/slick.min.js"></script>
     <script src="./js/header.js"></script>
+    <script src="./js/store.js"></script>
 </body>
 
 </html>
