--- a/store.html
+++ b/store.html
@@ -56,33 +56,82 @@
     <section>
         <h3>나라별 여행지</h3>
         <div class="ctryBanner">
+            <a href="./Store_list.html" class="ctry">
+                <img src="./source/cG_bg10.jpg" class="ctryBg">
+                <div class="ctryTxt">
+                    <h4>대만</h4>
+                    <p><span class="sCnt">29</span> 개의 상품 > </p>
+                </div>
+            </a>
 
+            <a href="./Store_list.html" class="ctry">
+                <img src="./source/cG_bg9.jpg" class="ctryBg">
+                <div class="ctryTxt">
+                    <h4>홍콩</h4>
+                    <p><span class="sCnt">29</span> 개의 상품 > </p>
+                </div>
+            </a>
+
+            <a href="./Store_list.html" class="ctry">
+                <img src="./source/cG_bg7.jpg" class="ctryBg">
+                <div class="ctryTxt">
+                    <h4>대만</h4>
+                    <p><span class="sCnt">29</span> 개의 상품 > </p>
+                </div>
+            </a>
+
+            <a href="./Store_list.html" class="ctry">
+                <img src="./source/cG_bg13.jpg" class="ctryBg">
+                <div class="ctryTxt">
+                    <h4>마카오</h4>
+                    <p><span class="sCnt">29</span> 개의 상품 > </p>
+                </div>
+            </a>
+
+            <a href="./Store_list.html" class="ctry">
+                <img src="./source/cG_bg10.jpg" class="ctryBg">
+                <div class="ctryTxt">
+                    <h4>일본</h4>
+                    <p><span class="sCnt">29</span> 개의 상품 > </p>
+                </div>
+            </a>
+
+            <a href="./Store_list.html" class="ctry">
+                <img src="./source/cG_bg2.jpg" class="ctryBg">
+                <div class="ctryTxt">
+                    <h4>베트남</h4>
+                    <p><span class="sCnt">29</span> 개의 상품 > </p>
+                </div>
+            </a>
+
+            <a href="./Store_list.html" class="ctry">
+                <img src="./source/cG_bg12.jpg" class="ctryBg">
+                <div class="ctryTxt">
+                    <h4>방콕</h4>
+                    <p><span class="sCnt">29</span> 개의 상품 > </p>
+                </div>
+            </a>
         </div>
 
         
         <div class="slider">
             <div class="bn01 bn">
                 <div class="bContent01 bContent ">
-                    <p>애니메이션 홍보 홍보</p>
+                    <p>몽골 기획전 오픈</p>
                 </div>
             </div>
             <div class="bn02 bn">
                 <div class="bContent02 bContent ">
-                    <p>머선머선 애니메이션</p>
+                    <p>일본 에어텔 보러가기</p>
                 </div>
             </div>
             <div class="bn03 bn">
                 <div class="bContent03 bContent ">
-                    <p>애니메이션 홍보 홍보</p>
+                    <p>제주도 1일 1만원부터 시작하는 에픽트립</p>
                 </div>
             </div>
             <div class="bn04 bn">
                 <div class="bContent04 bContent ">
-                    <p>애니메이션 홍보 홍보</p>
-                </div>
-            </div>
-            <div class="bn05 bn">
-                <div class="bContent05 bContent ">
                     <p>애니메이션 홍보 홍보</p>
                 </div>
             </div>
