--- a/store_posting.html
+++ b/store_posting.html
@@ -22,7 +22,7 @@
     <title>EpicTrip | 에픽트립</title>
 
     <link href="./css/headFoot.css" rel="stylesheet">
-    <link href="./css/store_posting.css" rel="stylesheet">
+    <link href="./css/sPosting.css" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -163,7 +163,7 @@
                 </div>   
 
                 <div class="dateSelec">
-                    <span>날짜 선택</span>
+                    <span id="dateClick">날짜 선택</span>
                     <div class="dateInput">
                         <div class="dpDiv">
                             <input type="text" name="startDay" class="datePick" placeholder="첫째날 선택">
@@ -173,9 +173,26 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="saleSelec">
+                    <span>요일별 할인 선택</span>
+                    <div class="saleDiv">
+                        <select name="saleDay">
+                            <option disabled selected>요일 선택</option>
+                            <option value=""></option>
+                        </select>
+                        <select name="salePercent">
+                            <option disabled selected>할인율 선택</option>
+                        </select>
+                    </div>
+                </div>
             </div>
 
             <div class="detailWrite">
+
+                <div class="titleBox">
+                    <input type="text" name="title" placeholder="제목을 입력해주세요">
+                </div>
 
                 <div class="imgUpAll">
                     <span>배경 이미지를 선택해주세요</span>
@@ -186,11 +203,10 @@
                     </div>
                 </div>
 
-                <div class="titleBox">
-                    <input type="text" name="title" placeholder="제목을 입력해주세요">
-                </div>
+                
 
                 <div class="contextBox">
+                    <span>상세글 입력</span>
                     <textarea name="context" placeholder="1. 현재 동행이 있나요?&#13;&#10;ex) 혼자에요 / 동행 1명이 있어요&#13;&#10;&#13;&#10;2.어떤 동행을 찾고 있나요?&#13;&#10;ex) 맛집 탐방을 좋아하는 20대 여성 동행을 찾아요!&#13;&#10;&#13;&#10;3. 원하는 여행 코스가 있다면 알려주세요!&#13;&#10;(1000자 이내) "></textarea>
                 </div>
             </div>
@@ -208,7 +224,7 @@
 
 
     <script src="./js/header.js"></script>
-    <script src="./js/cWriteGrp.js"></script>
+    <script src="./js/sPosting.js"></script>
 </body>
 
 </html>
