--- a/store_posting.html
+++ b/store_posting.html
@@ -176,15 +176,31 @@
 
                 <div class="saleSelec">
                     <span>요일별 할인 선택</span>
-                    <div class="saleDiv">
-                        <select name="saleDay">
-                            <option disabled selected>요일 선택</option>
-                            <option value=""></option>
-                        </select>
-                        <select name="salePercent">
-                            <option disabled selected>할인율 선택</option>
-                        </select>
+
+                    <div class="daySelecAll">
+                        <input type="checkbox" name="saleDay" id="day1" value="day1">
+                        <label for="day1">월</label>
+                        <input type="checkbox" name="saleDay" id="day2" value="day2">
+                        <label for="day2">화</label>
+                        <input type="checkbox" name="saleDay" id="day3" value="day3">
+                        <label for="day3">수</label>
+                        <input type="checkbox" name="saleDay" id="day4" value="day4">
+                        <label for="day4">목</label>
+                        <input type="checkbox" name="saleDay" id="day5" value="day5">
+                        <label for="day5">금</label>
+                        <input type="checkbox" name="saleDay" id="day6" value="day6">
+                        <label for="day6">토</label>
+                        <input type="checkbox" name="saleDay" id="day7" value="day7">
+                        <label for="day7">일</label>
                     </div>
+
+                    <select name="salePercent" class="saleDrop">
+                        <option disabled selected>할인율 선택</option>
+                        <option value="5">5%</option>
+                        <option value="10">10%</option>
+                        <option value="15">15%</option>
+                        <option value="20">20%</option>
+                    </select>
                 </div>
             </div>
 
@@ -194,8 +210,15 @@
                     <input type="text" name="title" placeholder="제목을 입력해주세요">
                 </div>
 
+                <div class="contxtAll">
+                    <span>상세글 입력</span>
+                    <div class="contextBox">
+                        <textarea name="context" placeholder="여행 상품에 대해 상세히 기재해주세요"></textarea>
+                    </div>
+                </div>
+
                 <div class="imgUpAll">
-                    <span>배경 이미지를 선택해주세요</span>
+                    <span>배경 이미지 선택</span>
                     <input type="file" name="imgFile" id="fileInput">
                     <label for="fileInput" class="uploadedBtn">재업로드</label> 
                     <div class="imgArea">
@@ -203,12 +226,18 @@
                     </div>
                 </div>
 
-                
+                <div class="infoBottom">
+                    <div>
+                        <span>작성자 정보</span>
+                        <p class="writer"></p>
+                    </div>
 
-                <div class="contextBox">
-                    <span>상세글 입력</span>
-                    <textarea name="context" placeholder="1. 현재 동행이 있나요?&#13;&#10;ex) 혼자에요 / 동행 1명이 있어요&#13;&#10;&#13;&#10;2.어떤 동행을 찾고 있나요?&#13;&#10;ex) 맛집 탐방을 좋아하는 20대 여성 동행을 찾아요!&#13;&#10;&#13;&#10;3. 원하는 여행 코스가 있다면 알려주세요!&#13;&#10;(1000자 이내) "></textarea>
+                    <div>
+                        <span>가격</span>
+                        <input type="number" name="price" placeholder="가격을 입력해주세요">
+                    </div>
                 </div>
+                
             </div>
             <button type="button" class="submitBtn">작성완료</button>
         </form>
