--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -32,10 +32,10 @@
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
-                        <a href="#"  class="store">여행상점</a>
+                        <a href="./Store.html"  class="store">여행상점</a>
                     </li>
                     <li>
-                        <a href="#"  class="community">커뮤니티</a>
+                        <a href="./Community_Group.html"  class="community">커뮤니티</a>
                     </li>
                 </ul>
                 <div class="userHead">
