--- a/Community_SchDetail.html
+++ b/Community_SchDetail.html
@@ -69,7 +69,10 @@
                 <div class="infoTitle">
                     <a href="./Community_Schedule.html" class="backBtn btn"></a>
                     <span>닉네임 님의 여행 일정</span>
-                    <span class="delBtn btn"></span>
+                    <div class="btns">
+                        <button type="button" class="uptBtn btn"></button>
+                        <button type="button" class="delBtn btn"></button>
+                    </div>
                 </div>
                 <span class="schDays">23.08.23. ~ 23.08.28.</span>
                 <div class="schLoc">여행위치</div>
