--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -22,7 +22,7 @@
     <title>EpicTrip | 에픽트립</title>
 
     <link href="./css/headFoot.css" rel="stylesheet">
-    <link href="./css/sList.css" rel="stylesheet">
+    <link href="./css/sDetail.css" rel="stylesheet">
 </head>
 
 <body>
@@ -52,6 +52,41 @@
     </header>
 
     <section>
+        <div class="banner">
+            <img src="./source/sDetailBg.jpg" class="bnImg">
+        </div>
+        
+        <div class="postContent">
+            <div class="pLeft">
+                <strong>[베트남 호치민] 🌇 Ho Chi Minh City tour in 1 Day 🙌🏻</strong>
+                <div class="titleBottom">
+                    <div class="postingBtn">
+                        <button type="button" id="upBtn">수정</button>
+                        <button type="button" id="delBtn">삭제</button>
+                    </div>
+                    <span class="itemPrice">124,000원</span>
+                </div>
+
+                <p class="postText">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde iste officia expedita nihil deleniti quas laboriosam voluptatum aliquam corrupti saepe nostrum amet aliquid, quod odio vitae sit quidem quasi ipsum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nostrum doloremque, laudantium rem rerum provident quo commodi itaque odio magnam necessitatibus optio quam. Dolore consequuntur sapiente, ea nulla voluptatibus ex!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde iste officia expedita nihil deleniti quas laboriosam voluptatum aliquam corrupti saepe nostrum amet aliquid, quod odio vitae sit quidem quasi ipsum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nostrum doloremque, laudantium rem rerum provident quo commodi itaque odio magnam necessitatibus optio quam. Dolore consequuntur sapiente, ea nulla voluptatibus ex!
+                </p>
+
+                <div class="postDV">
+                    <span>2023-08-11</span> <span>14:31</span> <p>조회수</p> <span>51</span>
+                </div>
+            </div>
+
+
+            <div class="pRight">
+                <div id="calendar"></div>
+
+                
+            </div>
+        </div>
+
     </section>
 
     <footer>
@@ -63,6 +98,7 @@
 
 
     <script src="./js/header.js"></script>
+    <script src="./js/sDetail.js"></script>
 
 </body>
 
