--- a/Community_GroDetail.html
+++ b/Community_GroDetail.html
@@ -81,7 +81,7 @@
                             <span>3명</span>
                         </div>
                         <div class="dDetail">
-                            <img src="./source/date.png" alt="">
+                            <img src="./source/dateGr.png" alt="">
                             <span>2023-10-08 ~ 2023-10-11</span>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button>동행 신청하기</button>
+                            <button type="button">동행 신청하기</button>
                         </div>
                     </div>
                     <div class="joinMem">
