--- a/Community_Group.html
+++ b/Community_Group.html
@@ -75,7 +75,7 @@
 
         <div class="schAll">
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -121,7 +121,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -167,7 +167,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -213,7 +213,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -259,7 +259,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -305,7 +305,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -351,7 +351,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -397,7 +397,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -443,7 +443,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -489,7 +489,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -535,7 +535,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -581,7 +581,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
@@ -627,7 +627,7 @@
                 </div>
             </a>
 
-            <a href="Community_GrpDetail.html" class="goDetail">
+            <a href="Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
